--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,26 +1,5 @@
 @import '../../styles/abstracts/variables';
 
 .m-table {
-    width: 100%;
-    border: $m-border-width--s solid $m-color--grey-lighter;
-
-    thead {
-        text-align: left;
-        background: $m-color--grey-lighter;
-
-        th {
-            padding: $m-padding--s;
-        }
-    }
-
-    tr {
-        &:nth-child(even) {
-            background: $m-color--grey-lightest;
-            border: none;
-        }
-
-        td {
-            padding: $m-padding--xs $m-padding--s;
-        }
-    }
+    @include m-table();
 }
