--- a/src/components/button/button.sandbox.html
+++ b/src/components/button/button.sandbox.html
@@ -2,8 +2,10 @@
     <!-- Sandbox template -->
     <h3>L'utilsation de v-html dans un bouton et d'un &lt;m-i18n &gt; dans un autre n'est pas compatible</h3>
     <p class="m-u--margin-bottom">
-        <a href="https://jira.dti.ulaval.ca/browse/MODUL-532">https://jira.dti.ulaval.ca/browse/MODUL-532</a>
+            <a href="https://github.com/ulaval/modul-components/pull/536">PR-536</a> : Pour démontrer le bug qui force l'utilisation de key= lorsque l'on utilise des template voir <a href="https://fr.vuejs.org/v2/guide/conditional.html#Controle-des-elements-reutilisables-avec-key">(la doc officiel)</a>
+
     </p>
+
     <p>
         <div>
             using key
