--- a/src/components/dialog/dialog.sandbox.html
+++ b/src/components/dialog/dialog.sandbox.html
@@ -6,7 +6,7 @@
     </m-dialog>
 
     <h2 class="m-u--no-margin">Width default with specified type, hint and negative link</h2>
-    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" negativeLink="true" type="confirmation" hint="Je suis un indice">
+    <m-dialog class="m-u--margin-top" title="Titre de la fenêtre" cancelLink="true" type="confirmation" hint="Je suis un indice">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
     </m-dialog>
@@ -18,7 +18,7 @@
     </m-dialog>
 
     <h2>Width large with with specified type, hint and negative link</h2>
-    <m-dialog class="m-u--margin-top" type="information" title="Titre de la fenêtre" negativeLink="true" width="large" hint="Je suis un gros gros indice">
+    <m-dialog class="m-u--margin-top" type="information" title="Titre de la fenêtre" cancelLink="true" width="large" hint="Je suis un gros gros indice">
         <m-button slot="trigger">Ouvrir la fenêtre</m-button>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, delectus, quisquam nobis recusandae, vel doloribus iure sapiente debitis nisi pariatur impedit asperiores magni rerum ratione qui voluptatum dolorum vero id!
     </m-dialog>
