--- a/src/components/message-page/message-page.sandbox.html
+++ b/src/components/message-page/message-page.sandbox.html
@@ -65,7 +65,7 @@
 
     <h5>unexpected error popup with hints and links</h5>
     <m-button v-m-popup:errorpopup>pop me an error</m-button>
-    <m-modal ref="errorpopup" :negativeLink="false" ok-label="Fermer">
+    <m-modal ref="errorpopup" :cancelLink="false" ok-label="Fermer">
             <m-message-page state="error" :title="title" icon-name="m-svg__warning-filled" :hints="manyHints" :links="manyLinks"></m-message-page>
     </m-modal>
 
