MODUL-505 - Table without data

--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -80,7 +80,7 @@
         </template>
     </m-table>
 
-    <h2>Table - empty</h2>
+    <h2>Table - empty without slot</h2>
     <m-table :data="emptyData" :max-rows="5">
         <template slot="table-header">
             <m-table-header-cell>Name</m-table-header-cell>
@@ -88,22 +88,18 @@
             <m-table-header-cell>Username</m-table-header-cell>
             <m-table-header-cell width="10%"></m-table-header-cell>
         </template>
-        <template slot="table-data" scope="{data}">
-            <m-table-body-cell>
-                <m-link>{{ data.name }}</m-link>
-            </m-table-body-cell>
-            <m-table-body-cell>
-                {{ data.age }}
-            </m-table-body-cell>
-            <m-table-body-cell>
-                {{ data.username }}
-            </m-table-body-cell>
-            <m-table-body-cell>
-                <m-option>
-                    <m-option-item-edit @click="editData(data.id)"></m-option-item-edit>
-                    <m-option-item-delete @click="deleteData(data.id)"></m-option-item-delete>
-                </m-option>
-            </m-table-body-cell>
+    </m-table>
+
+    <h2>Table - empty with slot</h2>
+    <m-table :data="emptyData" :max-rows="5">
+        <template slot="table-header">
+            <m-table-header-cell>Name</m-table-header-cell>
+            <m-table-header-cell>Age</m-table-header-cell>
+            <m-table-header-cell>Username</m-table-header-cell>
+            <m-table-header-cell width="10%"></m-table-header-cell>
+        </template>
+        <template slot="table-empty">
+            <td colspan="4" style="text-align:center; padding: 10px; background-color: #ff5252; color: white;">Je suis vide</td>
         </template>
     </m-table>
 </div>
