--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -1,5 +1,5 @@
 @import '../../styles/abstracts/variables';
 
-.m-table {
-    @include m-table();
+.m-table-regular {
+    @include m-table-regular();
 }
