--- a/src/components/steppers-item/steppers-item.html
+++ b/src/components/steppers-item/steppers-item.html
@@ -1,9 +1,12 @@
-<li :tabindex="isTabIndex" class="m-steppers-item"
+<li class="m-steppers-item"
     :class="{ 'm--is-completed' : isCompleted,
               'm--is-in-progress' : isInProgress,
-              'm--is-disabled' : isDisabled }">
+              'm--is-disabled' : isDisabled,
+              'm--is-confirmation': confirmation }"
+    :tabindex="isTabIndex">
     <div class="m-steppers-item__icon" @click="onClick">
         <m-icon :name="iconName" :svg-title="iconTitle"></m-icon>
+        <m-icon class="m-steppers-item__icon-completed" v-if="confirmation" name="m-svg__completed-filled"></m-icon>
     </div>
     <div class="m-steppers-item__title" @click="onClick" ref="title">
         <slot></slot>
