--- a/src/components/panel/panel.sandbox.html
+++ b/src/components/panel/panel.sandbox.html
@@ -1,13 +1,6 @@
 <div>
-    <!-- Sandbox template -->
-    <h3>Test Title</h3>
-    <p class="m-u--margin-bottom">
-        Test description
-        <!-- if relevant, add link to PR
-        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
-        -->
-    </p>
-    <p>
-        <m-panel><!-- Test case --></m-panel>
-    </p>
+    <m-panel>
+        <h2 slot="header">Je suis un Titre</h2>
+        <p>Je suis le corps</p>
+    </m-panel>
 </div>
