--- a/src/components/table/table.sandbox.html
+++ b/src/components/table/table.sandbox.html
@@ -1,5 +1,5 @@
 <div class="m-table-sandbox">
-    <h2>Table - With header and footer</h2>
+    <h2>Complex table - With header and footer</h2>
     <m-table>
         <m-table-header>
             <m-table-row>
@@ -15,12 +15,8 @@
                 <m-table-cell>
                     <m-link>{{ data.name }}</m-link>
                 </m-table-cell>
-                <m-table-cell>
-                    {{ data.age }}
-                </m-table-cell>
-                <m-table-cell>
-                    {{ data.username }}
-                </m-table-cell>
+                <m-table-cell>{{ data.age }}</m-table-cell>
+                <m-table-cell class="m-table-sandbox--underline">{{ data.username }}</m-table-cell>
                 <m-table-cell>
                     <span class="subscribed">Subscribed</span>
                 </m-table-cell>
@@ -32,27 +28,29 @@
                 </m-table-cell>
             </template>
         </m-table-body>
+        <m-table-footer>
+            <m-table-cell class="m-table-sandbox--show-more" colspan="5">
+                <m-link>Show more</m-link>
+            </m-table-cell>
+        </m-table-footer>
+    </m-table>
 
-        <!-- <template slot="table-header">
-            <m-table-header-cell>Name</m-table-header-cell>
-            <m-table-header-cell>Age</m-table-header-cell>
-            <m-table-header-cell>Username</m-table-header-cell>
-            <m-table-header-cell>Subscribed</m-table-header-cell>
-            <m-table-header-cell width="10%"></m-table-header-cell>
-        </template>
-        <m-table-header>
-            <m-table-row>
-                <m-table-cell>rtyr</m-table-cell>
-                <m-table-cell>rtyr</m-table-cell>
-                <m-table-cell>rtyr</m-table-cell>
-            </m-table-row>
-        </m-table-header>
-        <template slot="table-data" scope="{data}">
-
-        </template>
-        <template slot="table-footer">
-            <m-table-footer-cell colspan="5" style="text-align: center;"><m-link @click="showMore">Show more</m-link></m-table-footer-cell>
-        </template> -->
+    <h2>Simple table</h2>
+    <m-table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Bob</td>
+                <td>20</td>
+                <td>Canada</td>
+            </tr>
+        </tbody>
     </m-table>
 
     <!-- <h2>Table - Without header and footer</h2>
@@ -111,18 +109,70 @@
             <m-table-header-cell>Username</m-table-header-cell>
             <m-table-header-cell width="10%"></m-table-header-cell>
         </template>
+    </m-table>-->
+
+    <h2>Table - empty without slot</h2>
+    <m-table :data="emptyData" :max-rows="5">
+         <m-table-header>
+            <m-table-row>
+                <m-table-header-cell>Name</m-table-header-cell>
+                <m-table-header-cell>Age</m-table-header-cell>
+                <m-table-header-cell>Username</m-table-header-cell>
+                <m-table-header-cell>Subscription</m-table-header-cell>
+                <m-table-header-cell width="10%"></m-table-header-cell>
+            </m-table-row>
+        </m-table-header>
+        <m-table-body :data="emptyData" columns="5">
+            <template scope="{data}">
+                <m-table-cell>
+                    <m-link>{{ data.name }}</m-link>
+                </m-table-cell>
+                <m-table-cell>{{ data.age }}</m-table-cell>
+                <m-table-cell>{{ data.username }}</m-table-cell>
+                <m-table-cell>
+                    <span class="subscribed">Subscribed</span>
+                </m-table-cell>
+                <m-table-cell>
+                    <m-option>
+                        <m-option-item-edit @click="editData(data.id)"></m-option-item-edit>
+                        <m-option-item-delete @click="deleteData(data.id)"></m-option-item-delete>
+                    </m-option>
+                </m-table-cell>
+            </template>
+        </m-table-body>
     </m-table>
 
     <h2>Table - empty with slot</h2>
     <m-table :data="emptyData" :max-rows="5">
-        <template slot="table-header">
-            <m-table-header-cell>Name</m-table-header-cell>
-            <m-table-header-cell>Age</m-table-header-cell>
-            <m-table-header-cell>Username</m-table-header-cell>
-            <m-table-header-cell width="10%"></m-table-header-cell>
-        </template>
-        <template slot="table-empty">
-            <td colspan="4" style="text-align:center; padding: 10px; background-color: #ff5252; color: white;">Empty data</td>
-        </template>
-    </m-table> -->
+         <m-table-header>
+            <m-table-row>
+                <m-table-header-cell>Name</m-table-header-cell>
+                <m-table-header-cell>Age</m-table-header-cell>
+                <m-table-header-cell>Username</m-table-header-cell>
+                <m-table-header-cell>Subscription</m-table-header-cell>
+                <m-table-header-cell width="10%"></m-table-header-cell>
+            </m-table-row>
+        </m-table-header>
+        <m-table-body :data="emptyData" columns="5">
+            <template scope="{data}">
+                <m-table-cell>
+                    <m-link>{{ data.name }}</m-link>
+                </m-table-cell>
+                <m-table-cell>{{ data.age }}</m-table-cell>
+                <m-table-cell>{{ data.username }}</m-table-cell>
+                <m-table-cell>
+                    <span class="subscribed">Subscribed</span>
+                </m-table-cell>
+                <m-table-cell>
+                    <m-option>
+                        <m-option-item-edit @click="editData(data.id)"></m-option-item-edit>
+                        <m-option-item-delete @click="deleteData(data.id)"></m-option-item-delete>
+                    </m-option>
+                </m-table-cell>
+            </template>
+            <template slot="table-empty">
+                <m-table-cell :colspan="5" style="text-align:center; padding: 10px; background-color: #ff5252; color: white;">Empty data</m-table-cell>
+            </template>
+        </m-table-body>
+    </m-table>
 </div>
